# software-raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  color.h  hittable.h  hittable_list.h  material.h  mesh.h  model.h  ray.h  raytracer.h  sphere.h  triangle.h  vertex.h
src/: hittable_list.cpp  main.cpp  mesh.cpp  model.cpp  sphere.cpp  triangle.cpp
